# calamares-settings

./: CMakeLists.txt  README.md
cutefish_config/: settings.conf
cutefish_config/branding/cutefishos/: branding.desc  show.qml
cutefish_config/modules/: after_bootloader_context.conf  bootloader.conf  displaymanager.conf  grubcfg.conf  machineid.conf  packages.conf  partition.conf  pre_bootloader_context.conf  users.conf  welcome.conf
debian/: changelog  control  copyright  rules
